--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 **/tsconfig.node.json
 **/tsconfig.json
 **/tailwind.config.cjs
+**/tailwind.config.js
 **/postcss.config.js
 **/vite-env.d.ts
 **/vite.config.ts
